--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 /*Global settings start*/
+.triangleDown{
+    display: inline-block;
+    width:0;
+    height:0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 10px solid #00b7ee;
+}
 .triangleRight{
     display: inline-block;
     width: 0;
@@ -70,7 +78,7 @@ input[type="submit"]:hover, input[type="reset"]:hover {
 .headerIcon{
     position: absolute;
     left: 10%;
-    z-index: 999;
+    z-index: 99;
 }
 .headerIcon:hover{
     -webkit-transform: rotate(-360deg);
@@ -564,6 +572,9 @@ footer{
     padding-left: 20px;
     box-sizing: border-box;
 }
+.cSContentContainer .cSContentMenu{
+    border-bottom: 0;
+}
 .cSNavContainer, .cSContentContainer{
     float: left;
 }
@@ -618,13 +629,30 @@ footer{
     text-align: right;
 }
 /*subPage content ends*/
-/*editor starts*/
+/*absolute editor starts*/
 body{
     position: relative;
 }
 .editor{
-    display: none;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(100,100,100,0.5);
+    z-index: 100;
 }
+.editorContainer{
+    max-width: 600px;
+    margin: 200px auto 0 auto;
+    background-color: #ffffff;
+    border-radius: 10px;
+}
+.eHeader{
+    font-size: 24px;
+    color: #00b7ee;
+    margin: 0 40px 0 40px;
+    padding-top: 20px;
+}
+/*absolute editor ends*/
 /*editor starts*/
 .subNewsDate{
     float: right;
@@ -637,7 +665,6 @@ body{
     display: inline-block;
 }
 .eyeSub{
-    height: 12px;
     background-image: url(../img/subEyeOn.png);
     -webkit-transition: all .5s ease-in-out;
     -moz-transition: all .5s ease-in-out;
@@ -693,6 +720,9 @@ body{
 .add:hover{
     background-image: url(../img/addW.png)
 }
+.cSTOptions .cSTOHint{
+    display: inline-block;
+}
 .cSCContainer{
     float: right;
     margin-right: 10px;
@@ -701,6 +731,21 @@ body{
     border-bottom: 2px solid #cccccc;
     padding: 10px 20px;
 }
+.cSCUlContainer span{
+    font-size: 14px;
+}
+.cSTOHint{
+    float: right;
+    margin: 0 15px;
+}
+.cSTOIcons{
+    float: right;
+    margin: 0 15px;
+}
+.cSTOptions{
+    padding-bottom: 10px;
+}
+
 
 
 
