--- a/css/style.css
+++ b/css/style.css
@@ -745,7 +745,25 @@ body{
 .cSTOptions{
     padding-bottom: 10px;
 }
-
+.eFormOuterUl{
+    margin: 0 55px;
+}
+.eFormInnerUl{
+    margin: 0 25px;
+    padding-top: 10px;
+}
+.eFormOuterLi{
+    padding-bottom: 8px;
+}
+.eFormInnerLi{
+    padding-bottom: 5px;
+}
+.eFormInnerMore{
+    margin-left: 20px;
+}
+.iconTri{
+    float: right;
+}
 
 
 
